Changelog
=========

2.1.2 - Unreleased
------------------

- Update for Plone 4.1: include Products.CMFCore to define missing
  permissions. Fix undefined name showContents in default view. [thefunny42]

- Add "Add permission" for Site Administrator too. [thefunny42]

- Add controlpanel option to turn off displaying full item contents in pop-up.
  (http://plone.org/products/maps/issues/34)
  [khink]

2.1.1 - 2011-05-13
------------------

- Force validator registration before use. Avoids spurious warning.
  [ggozad]

- Kicked out qPloneGoogleMaps and Products.geolocation
  [ggozad]

- Fixed broken TestCase.
  [ggozad]

- Updated control panel actions for Plone 4.
  [ggozad]

- Update ILocation interface. Custom content type must implement getMarkerIcon
  method to successfully support LocationMarker adapter.
  [naro]

- Added notes about implementation geolocation field to custom content type.
  [naro]

- Allow maps_map to be used as view template without being the default view
  (http://plone.org/products/maps/issues/32)
  [khink]

- Replace __init__ profile initialization with xml file GS profile setup, so
  we can add Products.Maps as a dependency in another product's Generic Setup
  profile.
  [khink]

- Added Dutch translation
  [kcleong]

2.1.0 - 2010-09-19
------------------

- Update documentation to require Plone 4.x.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]

- Removed IndexIterator since it was removed in Plone 4.0.
  [pbauer]

- Added support missing plone domain on i18n directory. Added Spanish
  translation. Updated full support for i18n and generate new template.
  [macagua]

- Improve map initialization when the location field is displayed in an other
  schemata. Merged from branches/map-in-another-schemata.
  Notes: Width and height must be define in the theme's styles, if you put the
  field in an other schemata::

    div.googleMapEdit {
        width:756px; /* must be in pixels */